--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
@@ -26,7 +26,7 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "baseUrl": "."
-  },
+    },
   "exclude": [
     "node_modules"
   ],
