--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.17.11",
     "@types/node": "^14.14.20",
+    "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
