--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/mmiller21/movieClub#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/connect-redis": "0.0.16",
     "@types/cors": "^2.8.9",
@@ -32,6 +33,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
