--- a/movieclub-client/package.json
+++ b/movieclub-client/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "next": "10.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.1.3"
   }
 }
