--- a/movieclub-client/package.json
+++ b/movieclub-client/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "babel-plugin-styled-components": "^1.12.0",
