--- a/movieclub-server/package.json
+++ b/movieclub-server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js"
+    "dev": "nodemon dist/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,10 +27,15 @@
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.20",
     "@types/nodemailer": "^6.4.0",
+    "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
