--- a/movieclub-server/package.json
+++ b/movieclub-server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
-    "test": "jest"
+    "dev": "env NODE_ENV=development nodemon dist/index.js",
+    "test": "env NODE_ENV=test jest"
   },
   "repository": {
     "type": "git",
