--- a/movieclub-server/package.json
+++ b/movieclub-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "env NODE_ENV=development nodemon dist/index.js",
-    "test": "env NODE_ENV=test jest"
+    "test": "env NODE_ENV=test jest --runInBand"
   },
   "repository": {
     "type": "git",
